CHANGELOG FOR ATOMSK
====================


Master (development)
--------------------


Beta 0.10.6 (07 Sept. 2018)
---------------------------
- in mode "--polycrystal", fixed a bug where the two crystals were not aligned when generating bicrystals.


Beta 0.10.5 (05 Sept. 2018)
---------------------------
- in option "-dislocation", fixed a bug in the creation of dislocation loops with a square shape. Thanks to Yong Zhang, Monash University, Clayton, Australia, for pointing out this bug.


Beta 0.10.4 (03 Sept. 2018)
---------------------------
- in mode "--polycrystal", fixed a bug where atoms were duplicated when generating 2-D polycrystals.


Beta 0.10.3 (04 July 2018)
--------------------------
- in mode "--create", added possibility to generate the LiMO2 structure (where M is a transition metal). Thanks to Raoul Aurelien Ngayam Happy, Paul Sherrer Institute, Switzerland, for implementing this feature.
- in option "-select", added possibility to select particles that have the minimum or maximum value of a property. Also added the possibility to combine a new selection to the existing one (add, remove, intersect, xor). Also added the possibility to select atoms inside or outside of a cone.
- added status checks in some memory allocations to avoid OS error "cannot allocate memory". Now in most cases Atomsk will display an error message and exit smoothly.
- fixed a bug in mode "--polycrystal", where the random distribution of angles was biased, and could result in slightly textured polycrystals. Thanks to Sen Chen, The Peac Institute of Multiscale Sciences (PIMS), Chengdu, China, for pointing out this bug.
- fixed a bug where the PDFFIT file format "str" was not recognized from the command-line.
- fixed a bug in option "--polycrystal" that was preventing to generate 2-D polycrystals.


Beta 0.10.2 (24 May 2018)
-------------------------
- fixed a bug when reading PWscf input files (*.pw). Thanks to Dongho Nguimdo Moise, AIMS, Cameroon, for pointing out this bug.